apps/oxlint/src/snapshots/fixtures__output_formatter_diagnostic_--format=github ok.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=github ok.js
working directory: fixtures/output_formatter_diagnostic
----------
----------
CLI result: LintSucceeded
----------
