apps/oxlint/src/snapshots/fixtures__output_formatter_diagnostic_--format=github parser-error.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=github parser-error.js
working directory: fixtures/output_formatter_diagnostic
----------
::error file=parser-error.js,line=3,endLine=3,col=9,endColumn=10,title=oxlint::Expected `;` but found `:`
----------
CLI result: LintFoundErrors
----------
