apps/oxlint/src/snapshots/fixtures__output_formatter_diagnostic_--format=junit --report-unused-disable-directives disable-directive.js@oxlint.snap
---
source: apps/oxlint/src/tester.rs
---
########## 
arguments: --format=junit --report-unused-disable-directives disable-directive.js
working directory: fixtures/output_formatter_diagnostic
----------
<?xml version="1.0" encoding="UTF-8"?>
<testsuites name="Oxlint" tests="3" failures="3" errors="0">
    <testsuite name="disable-directive.js" tests="3" disabled="0" errors="0" failures="3">
        <testcase name="">
            <failure message="Unused eslint-disable directive (no problems were reported).">line 9, column 3, Unused eslint-disable directive (no problems were reported).</failure>
        </testcase>
        <testcase name="">
            <failure message="Unused eslint-disable directive (no problems were reported).">line 12, column 3, Unused eslint-disable directive (no problems were reported).</failure>
        </testcase>
        <testcase name="">
            <failure message="Unused eslint-disable directive (no problems were reported).">line 15, column 3, Unused eslint-disable directive (no problems were reported).</failure>
        </testcase>
    </testsuite>
</testsuites>
----------
CLI result: LintSucceeded
----------
